<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ReciclagemActivity">

    <View
        android:id="@+id/corDeFundo5"
        android:layout_width="357dp"
        android:layout_height="648dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="78dp"
        android:background="#FFF8A4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnColeta"
        android:layout_width="150dp"
        android:layout_height="61dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="98dp"
        android:backgroundTint="#003C35"
        android:onClick="paraColeta"
        android:text="@string/recicla_botao"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="17sp"
        app:iconTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/titulo5"
        android:layout_width="359dp"
        android:layout_height="81dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="626dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/titulo_reciclagem"
        android:textColor="#43A047"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_1"
        android:layout_width="126dp"
        android:layout_height="37dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="221dp"
        android:layout_marginBottom="636dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="inter_word"
        android:letterSpacing="0.01"
        android:text="@string/reciclagem_texto_1"
        android:textAlignment="viewStart"
        android:textColor="#43A047"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_2"
        android:layout_width="169dp"
        android:layout_height="37dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="636dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="inter_word"
        android:letterSpacing="0.01"
        android:text="@string/reciclagem_texto_2"
        android:textAlignment="viewStart"
        android:textColor="#43A047"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_3"
        android:layout_width="156dp"
        android:layout_height="117dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="351dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.03"
        android:text="@string/reciclagem_texto_3"
        android:textAlignment="viewStart"
        android:textColor="#003C25"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_4"
        android:layout_width="155dp"
        android:layout_height="115dp"
        android:layout_marginStart="207dp"
        android:layout_marginTop="317dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="353dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.03"
        android:text="@string/reciclagem_texto_4"
        android:textAlignment="viewStart"
        android:textColor="#003C25"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_5"
        android:layout_width="314dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="397dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="300dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="inter_word"
        android:letterSpacing="0.01"
        android:text="@string/reciclagem_texto_5"
        android:textAlignment="center"
        android:textColor="#43A047"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_6"
        android:layout_width="317dp"
        android:layout_height="112dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="188dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="inter_word"
        android:letterSpacing="0.06"
        android:text="@string/reciclagem_texto_6"
        android:textAlignment="viewStart"
        android:textColor="#003C25"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/reciclagem_texto_7"
        android:layout_width="158dp"
        android:layout_height="71dp"
        android:layout_marginStart="213dp"
        android:layout_marginTop="501dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="159dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.15"
        android:text="@string/reciclagem_texto_7"
        android:textAlignment="viewStart"
        android:textColor="#2E7D32"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/reciclagem_imagem_1"
        android:layout_width="155dp"
        android:layout_height="156dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="206dp"
        android:layout_marginBottom="477dp"
        android:contentDescription="@string/imagem_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reciclagem_imagem_1" />

    <ImageView
        android:id="@+id/reciclagem_imagem_2"
        android:layout_width="155dp"
        android:layout_height="156dp"
        android:layout_marginStart="207dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="477dp"
        android:contentDescription="@string/imagem_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reciclagem_imagem_2" />

    <ImageView
        android:id="@+id/docinho_reciclagem"
        android:layout_width="258dp"
        android:layout_height="261dp"
        android:layout_marginTop="454dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/imagem_desc"
        android:rotationY="-178"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/docinho_pontos_2" />

    <ImageButton
        android:id="@+id/btnHome5"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraHome"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home_desselecionado"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/home_desselecionado" />

    <ImageButton
        android:id="@+id/btnPontos5"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraPontos"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pontos_desselecionado"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/pontos_desselecionado" />

    <ImageButton
        android:id="@+id/btnReciclagem5"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/reciclagem_selecionado"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/reciclagem_selecionado" />

    <ImageButton
        android:id="@+id/btnUsos5"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraUsos"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/usos_desselecionado"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnAspectos5"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraAspectos"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/aspectos_desselecionado"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/aspectos_desselecionado" />
</androidx.constraintlayout.widget.ConstraintLayout>