<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaAspectos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AspectosActivity">

    <View
        android:id="@+id/corDeFundo3"
        android:layout_width="357dp"
        android:layout_height="645dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="79dp"
        android:background="#FFF8A4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo3"
        android:layout_width="340dp"
        android:layout_height="85dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="626dp"
        android:fontFamily="@font/comfortaa_light"
        android:text="@string/titulo_aspectos"
        android:textColor="#43A047"
        android:textSize="57sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_1"
        android:layout_width="338dp"
        android:layout_height="102dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="inter_word"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_1"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_2"
        android:layout_width="177dp"
        android:layout_height="118dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="439dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_2"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_3"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="361dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="370dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_3"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_4"
        android:layout_width="180dp"
        android:layout_height="54dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="302dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_4"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_5"
        android:layout_width="180dp"
        android:layout_height="77dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="210dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_5"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/aspectos_texto_6"
        android:layout_width="180dp"
        android:layout_height="77dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="117dp"
        android:fontFamily="sans-serif-medium"
        android:justificationMode="none"
        android:letterSpacing="0.01"
        android:text="@string/aspectos_texto_6"
        android:textAlignment="textStart"
        android:textColor="#003C25"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/aspectos_imagem"
        android:layout_width="146dp"
        android:layout_height="284dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="351dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="150dp"
        android:contentDescription="@string/imagem_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aspectos_imagem_1" />

    <ImageView
        android:id="@+id/docinho_aspectos"
        android:layout_width="193dp"
        android:layout_height="195dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="243dp"
        android:layout_marginBottom="347dp"
        android:contentDescription="@string/imagem_desc"
        android:rotation="-8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/docinho_aspectos" />

    <ImageButton
        android:id="@+id/btnAspectos3"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="254dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/aspectos_selecionado"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/aspectos_selecionado" />

    <ImageButton
        android:id="@+id/btnUsos3"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="328dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraUsos"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/usos_desselecionado"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnReciclagem3"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraReciclagem"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/reciclagem_desselecionado"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/reciclagem_desselecionado" />

    <ImageButton
        android:id="@+id/btnPontos3"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraPontos"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/pontos_desselecionado"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/pontos_desselecionado" />

    <ImageButton
        android:id="@+id/btnHome3"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="181dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/imagem_desc"
        android:onClick="paraHome"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/home_desselecionado"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck"
        tools:srcCompat="@drawable/home_desselecionado" />

    <Button
        android:id="@+id/btnSaiba"
        android:layout_width="139dp"
        android:layout_height="48dp"
        android:layout_marginStart="249dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="483dp"
        android:backgroundTint="#003C35"
        android:onClick="paraHist"
        android:text="@string/saibamais"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="17sp"
        app:iconTint="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>